# ANTK

./: README.md  meson.build
include/antk/core/: application.h  window.h
src/core/: application.cpp  meson.build  window.cpp
src/demo/: main.cpp  meson.build
src/demo/include/: demo.h
